# dlsrest

./: Dockerfile  README.md  test.md
docker/: .env  docker-compose.yml  faulty-rep.yml
src/: CMakeLists.txt
src/client/: client.cpp  client.hpp
src/common/: def.hpp  utils.cpp  utils.hpp
src/impl/: client_impl.hpp  client_impl_rest.cpp  def.hpp  server_impl.hpp  server_impl_rest.cpp
src/server/: server.cpp  server.hpp
tests/: CMakeLists.txt  test_lock.cpp  test_stress.cpp
